2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New feature: automatic delegation of `t_main'.

	If the environment variable `SLR_NCORES' is set and non-zero, a
	place of that number of cores is allocated upon program start-up
	and used to delegate creation the program's top-level thread
	`t_main'. This achieves transparent reconfiguration of the number
	of cores a program is being run on without explicit use of the SEP
	in the program.

	* tools/include/svp/gomt.h: Capture the construct that allows to
	create a family of one thread from plain C mode in a macro
	`INVOKE_MT'.
	* tools/Makefile.am: List the new file.

	* lib/src/mtinit.c: Move definition of `environ' to ...
	* tools/lib/mtalpha-sim/slrt.s: ...here.

	* tools/lib/mtalpha-sim/slrt.s: New global objects
	`__main_place_id' and `__main_placeinfo'.

	* lib/src/mtinit.c: Use `SLR_NCORES' (if set) to initialize
	`__main_place_id' and `__main_placeinfo' using the SEP.

	* tools/lib/mtalpha-sim/main.c: Use `__main_place_id' to delegate
	creation of `t_main'.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the SL standard library.

	* lib/include/cstdarg.h: New.
	* lib/Makefile.am: Update accordingly.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More C99 compatibility.

	* lib/include/undocumented.h,
	* lib/include/cmalloc.h: Move declarations into...

	* lib/include/cstring.h,
	* lib/include/cstdlib.h: ...here.

	* lib/include/sac_helpers.h: Update accordingly.
	* lib/Makefile.am: List the new headers.

	* lib/include/cmalloc.h: Deprecate.

	* lib/src/atoi.c,
	* lib/src/atol.c,
	* lib/src/atoll.c,
	* lib/src/getenv.c,
	* lib/src/malloc_wrappers.c,
	* lib/src/mtinit.c,
	* lib/src/perf.c,
	* lib/src/stpcpy.c,
	* lib/src/stpncpy.c,
	* lib/src/strchr.c,
	* lib/src/strcpy.c,
	* lib/src/strdup.c,
	* lib/src/strlen.c,
	* lib/src/strncmp.c,
	* lib/src/strncpy.c,
	* lib/src/strtol.c,
	* lib/src/strtoll.c,
	* lib/src/strtoull.c: Use the new header names.
